--- a/index.html
+++ b/index.html
@@ -568,6 +568,242 @@
             </form>
           </div>
         </div>
+
+        <div class="row">
+          <div class="col-sm-4">
+            <section class="product-section product-user-gallery">
+              <header class="product-section-header">
+                <h1 class="title">유저들의 스타일링샷</h1>
+                <strong class="badge" aria-label="198개">198</strong>
+                <a class="icon-button is-right" href="/" aria-label="더보기">
+                  <i class="ic-chevron" aria-hidden="true"></i>
+                </a>
+              </header>
+
+              <div class="product-section-content">
+                <div class="user-gallery is-mobile" role="region">
+                  <div class="user-gallery-slider">
+                    <ol class="slider-list">
+                      <li
+                        class="slider-item"
+                        role="tabpanel"
+                        aria-labelledby="user-gallery-tab-5"
+                      >
+                        <div class="gallery-card">
+                          <figure class="gallery-card-image">
+                            <img
+                              src="./assets/images/img-review-01.jpg"
+                              alt=""
+                            />
+                            <figcaption class="visually-hidden"></figcaption>
+                            <!-- NOTE: 기획자님한테 확인 필요함 -->
+                          </figure>
+
+                          <div class="gallery-card-detail">
+                            <a href="/" class="avatar-32">
+                              <img
+                                src="./assets/images/img-user-02.jpeg"
+                                alt="User image"
+                              />
+                            </a>
+
+                            <a class="username" href="/">할부로 애틋하게</a>
+                            <span class="order">1/198</span>
+                          </div>
+                        </div>
+                      </li>
+
+                      <li
+                        class="slider-item"
+                        role="tabpanel"
+                        aria-labelledby="user-gallery-tab-4"
+                      >
+                        <div class="gallery-card">
+                          <figure class="gallery-card-image">
+                            <img
+                              src="./assets/images/img-review-02.jpg"
+                              alt=""
+                            />
+                            <figcaption class="visually-hidden"></figcaption>
+                            <!-- NOTE: 기획자님한테 확인 필요함 -->
+                          </figure>
+
+                          <div class="gallery-card-detail">
+                            <a href="/" class="avatar-32">
+                              <img
+                                src="./assets/images/img-user-03.jpeg"
+                                alt="User image"
+                              />
+                            </a>
+
+                            <a class="username" href="/">라이언 고슬밥</a>
+                            <span class="order">2/198</span>
+                          </div>
+                        </div>
+                      </li>
+
+                      <li
+                        class="slider-item"
+                        role="tabpanel"
+                        aria-labelledby="user-gallery-tab-3"
+                      >
+                        <div class="gallery-card">
+                          <figure class="gallery-card-image">
+                            <img
+                              src="./assets/images/img-review-03.jpg"
+                              alt=""
+                            />
+                            <figcaption class="visually-hidden"></figcaption>
+                            <!-- NOTE: 기획자님한테 확인 필요함 -->
+                          </figure>
+
+                          <div class="gallery-card-detail">
+                            <a href="/" class="avatar-32">
+                              <img
+                                src="./assets/images/img-user-07.jpeg"
+                                alt="User image"
+                              />
+                            </a>
+
+                            <a class="username" href="/">킴 가산디지털단지</a>
+                            <span class="order">3/198</span>
+                          </div>
+                        </div>
+                      </li>
+
+                      <li
+                        class="slider-item"
+                        role="tabpanel"
+                        aria-labelledby="user-gallery-tab-2"
+                      >
+                        <div class="gallery-card">
+                          <figure class="gallery-card-image">
+                            <img
+                              src="./assets/images/img-review-04.jpg"
+                              alt=""
+                            />
+                            <figcaption class="visually-hidden"></figcaption>
+                            <!-- NOTE: 기획자님한테 확인 필요함 -->
+                          </figure>
+
+                          <div class="gallery-card-detail">
+                            <a href="/" class="avatar-32">
+                              <img
+                                src="./assets/images/img-user-08.jpeg"
+                                alt="User image"
+                              />
+                            </a>
+
+                            <a class="username" href="/">모르는 개 산책</a>
+                            <span class="order">4/198</span>
+                          </div>
+                        </div>
+                      </li>
+
+                      <li
+                        class="slider-item"
+                        role="tabpanel"
+                        aria-labelledby="user-gallery-tab-1"
+                      >
+                        <div class="gallery-card">
+                          <figure class="gallery-card-image">
+                            <img
+                              src="./assets/images/img-review-05.jpg"
+                              alt=""
+                            />
+                            <figcaption class="visually-hidden"></figcaption>
+                            <!-- NOTE: 기획자님한테 확인 필요함 -->
+                          </figure>
+
+                          <div class="gallery-card-detail">
+                            <a href="/" class="avatar-32">
+                              <img
+                                src="./assets/images/img-user-06.jpeg"
+                                alt="User image"
+                              />
+                            </a>
+
+                            <a class="username" href="/">나름 전설이다</a>
+                            <span class="order">5/198</span>
+                          </div>
+                        </div>
+                      </li>
+                    </ol>
+                  </div>
+
+                  <div class="user-gallery-thumbnail">
+                    <ol class="thumbnail-list" role="tablist">
+                      <li
+                        class="thumbnail-item"
+                        id="user-gallery-tab-1"
+                        role="tab"
+                      >
+                        <button>
+                          <img
+                            src="./assets/images/img-review-01.jpg"
+                            alt="1번 스타일링 샷"
+                          />
+                        </button>
+                      </li>
+
+                      <li
+                        class="thumbnail-item"
+                        id="user-gallery-tab-2"
+                        role="tab"
+                      >
+                        <button>
+                          <img
+                            src="./assets/images/img-review-02.jpg"
+                            alt="2번 스타일링 샷"
+                          />
+                        </button>
+                      </li>
+
+                      <li
+                        class="thumbnail-item"
+                        id="user-gallery-tab-3"
+                        role="tab"
+                      >
+                        <button>
+                          <img
+                            src="./assets/images/img-review-03.jpg"
+                            alt="3번 스타일링 샷"
+                          />
+                        </button>
+                      </li>
+
+                      <li
+                        class="thumbnail-item"
+                        id="user-gallery-tab-4"
+                        role="tab"
+                      >
+                        <button>
+                          <img
+                            src="./assets/images/img-review-04.jpg"
+                            alt="4번 스타일링 샷"
+                          />
+                        </button>
+                      </li>
+
+                      <li
+                        class="thumbnail-item"
+                        id="user-gallery-tab-5"
+                        role="tab"
+                      >
+                        <button>
+                          <img
+                            src="./assets/images/img-review-05.jpg"
+                            alt="5번 스타일링 샷"
+                          />
+                        </button>
+                      </li>
+                    </ol>
+                  </div>
+                </div>
+              </div>
+            </section>
+          </div>
+        </div>
       </div>
 
       <div class="product-tab">
@@ -635,7 +871,7 @@
               </header>
 
               <div class="product-section-content">
-                <div class="user-gallery" role="region">
+                <div class="user-gallery is-desktop" role="region">
                   <div class="user-gallery-slider">
                     <ol class="slider-list">
                       <li
