--- a/index.html
+++ b/index.html
@@ -2684,14 +2684,14 @@
     <!-- NOTE: 북마크 추가했을 때 -->
 
     <aside class="bookmark-toast">
-      <h1 class="bookmark-titlte">스크랩 했습니다</h1>
-      <button class=" " type="button" aria-label="닫기">
+      <h1 class="bookmark-title">스크랩 했습니다</h1>
+      <button class="close-button" type="button" aria-label="닫기">
         <i class="ic-close" aria-hidden></i>
       </button>
 
       <div class="button-group">
         <a class="btn-32 btn-outlined" href="/"> 스크랩북 보기 </a>
-        <button class="btn-32 btn-filled-primary" type="button">
+        <button class="btn-32 btn-fill-primary" type="button">
           폴더에 담기
         </button>
       </div>
@@ -2699,13 +2699,13 @@
 
     <!-- NOTE: 북마크에서 삭제했을 때 -->
 
-    <aside class="bookmark-toast">
+    <!-- <aside class="bookmark-toast">
       <h1 class="bookmark-title">스크랩북에서 삭제했습니다</h1>
 
-      <button class=" " type="button" aria-label="닫기">
+      <button class="close-button" type="button" aria-label="닫기">
         <i class="ic-close" aria-hidden></i>
       </button>
-    </aside>
+    </aside> -->
 
     <div class="overlay" aria-hidden="true"></div>
 
