--- a/index.html
+++ b/index.html
@@ -2712,5 +2712,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
     <script src="./js/carousels.js"></script>
     <script src="./js/sidebar.js"></script>
+    <script src="./js/sidebar-dropdown.js"></script>
   </body>
 </html>
