--- a/index.html
+++ b/index.html
@@ -1890,11 +1890,7 @@
               aria-hidden="true"
             ></div>
 
-            <div
-              class="product-shipment is-open"
-              id="product-shipment"
-              role="tabpanel"
-            >
+            <div class="product-shipment" id="product-shipment" role="tabpanel">
               <header class="product-section-header sm-only">
                 <h1 class="title">배송/교환/환불</h1>
                 <strong class="badge" aria-label="0개">0</strong>
@@ -2713,5 +2709,6 @@
     <script src="./js/carousels.js"></script>
     <script src="./js/sidebar.js"></script>
     <script src="./js/sidebar-dropdown.js"></script>
+    <script src="./js/section-header.js"></script>
   </body>
 </html>
